--- a/messanger.ipynb
+++ b/messanger.ipynb
@@ -169,21 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'langchain_huggingface'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_huggingface\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m HuggingFaceEmbeddings\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'langchain_huggingface'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_huggingface import HuggingFaceEmbeddings\n"
    ]
@@ -400,13 +388,6 @@
    "source": [
     "recall_vector_store = InMemoryVectorStore(embedding_model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -840,6 +821,104 @@
    ],
    "source": [
     "llm.invoke(\"Hi \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for script in soup([\"script\", \"style\"]):\n",
+    "    script.extract()\n",
+    "\n",
+    "# Get text content\n",
+    "text = soup.get_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-03-23 15:32:32 - USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "loader = WebBaseLoader('https://www.geeksforgeeks.org/machine-learning/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page_data = loader.load()\n",
+    "page_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input =\"http://jks\"\n",
+    "if user_input.startswith(\"http://\") or user_input.startswith(\"https://\"):\n",
+    "    print(\"Invalid input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: malformed \\N character escape (413114150.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    a = [File(thread_id='78581cd1-df3a-4346-aeaf-30694852b3b1', name='s00466-022-02252-0.pdf', id='e3dab057-e37d-4927-8b1a-fc9ead9643c8', chainlit_key='e3dab057-e37d-4927-8b1a-fc9ead9643c8', url=None, object_key=None, path='G:\\NLP\\hugging_face_model\\.files\\edfd1403-1c0d-448a-b814-716e1fe47b9a\\e3dab057-e37d-4927-8b1a-fc9ead9643c8.pdf', content=None, display='inline', size=None, for_id='597f2ab1-f578-4675-906a-c79b168fd2a6', language=None, mime='pdf')]\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                                                                                                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: malformed \\N character escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [File(thread_id='78581cd1-df3a-4346-aeaf-30694852b3b1', name='s00466-022-02252-0.pdf', id='e3dab057-e37d-4927-8b1a-fc9ead9643c8', chainlit_key='e3dab057-e37d-4927-8b1a-fc9ead9643c8', url=None, object_key=None, path='G:\\NLP\\hugging_face_model\\.files\\edfd1403-1c0d-448a-b814-716e1fe47b9a\\e3dab057-e37d-4927-8b1a-fc9ead9643c8.pdf', content=None, display='inline', size=None, for_id='597f2ab1-f578-4675-906a-c79b168fd2a6', language=None, mime='pdf')]"
    ]
   },
   {
